# nize2

./: .gitignore  .gitmodules  .mise.toml  Cargo.toml  package-lock.json  package.json  tspconfig.yaml
.awa/plans/: PLAN-001-project-bootstrap.md  PLAN-002-tauri-bootstrap.md  PLAN-003-nize-api-bootstrap.md  PLAN-004-nize-api-client.md  PLAN-008-user-auth.md  PLAN-009-mcp-server.md  PLAN-013-configuration-system.md  PLAN-015-webview-bridge-mcp.md  PLAN-017-mcp-api-surface.md  PLAN-019-mcp-semantic-tool-discovery-api.md  PLAN-023-admin-embeddings-ui.md  PLAN-024-tool-discovery-hooks.md  PLAN-026-port-chat-frontend.md  PLAN-028-api-key-management.md  PLAN-030-clientpool-lru-eviction.md  PLAN-031-google-oauth.md
.awa/specs/: API-NIZE-auth.tsp  API-NIZE-config.tsp  API-NIZE-conversations.tsp  ARCHITECTURE.md
.awa/tasks/: TASK-BOOT-nize-api-001.md  TASK-XMCP-extended-mcp-transports-001.md
.github/agents/: zen.agent.md
.github/instructions/: refactoring.instructions.md  rust.instructions.md  tauri.instructions.md
.github/workflows/: desktop-build.yml  desktop-release.yml  release.yml  wasm.yml
.zen/plans/: PLAN-001-project-bootstrap.md  PLAN-002-tauri-bootstrap.md  PLAN-003-nize-api-bootstrap.md  PLAN-005-nize-terminator.md  PLAN-006-cross-platform-packaging.md  PLAN-007-pglite-migration.md  PLAN-008-user-auth.md  PLAN-010-cloud-server-split.md  PLAN-011-mcp-client-config.md  PLAN-012-nize-web-sidecar.md  PLAN-014-nize-web-dev-hot-reload.md  PLAN-015-webview-bridge-mcp.md  PLAN-016-bun-migration.md  PLAN-017-mcp-api-surface.md  PLAN-018-bruno-api-collections.md  PLAN-020-mcp-service-registration.md  PLAN-021-nextjs-as-tauri-frontend.md  PLAN-022-text-embedding-generation.md  PLAN-025-stdio-mcp-servers.md  PLAN-026-port-chat-frontend.md  PLAN-027-chat-backend.md  PLAN-029-chat-tool-calling.md  PLAN-030-clientpool-lru-eviction.md  PLAN-031-google-oauth.md  PLAN-032-idiomatic-oauth-workflow.md  PLAN-033-extended-mcp-transports.md
.zen/specs/: API-NIZE-auth.tsp  API-NIZE-chat.tsp  API-NIZE-common.tsp  API-NIZE-config.tsp  API-NIZE-conversations.tsp  API-NIZE-index.tsp  API-NIZE-ingest.tsp  API-NIZE-mcp-config.tsp  API-NIZE-permissions.tsp  API-NIZE-trace.tsp  ARCHITECTURE.md
.zen/tasks/: TASK-BOOT-nize-api-001.md  TASK-XMCP-extended-mcp-transports-001.md
bruno/: bruno.json
bruno/Admin/: admin-revoke-grant.bru  admin-revoke-link.bru  chat-trace.bru  create-admin-server.bru  delete-admin-server.bru  list-admin-config.bru  list-admin-servers.bru  list-all-grants.bru  list-all-groups.bru  list-all-links.bru  set-admin-role.bru  update-admin-config.bru  update-admin-server.bru
bruno/Auth/: create-mcp-token.bru  list-mcp-tokens.bru  logout-all.bru  revoke-mcp-token.bru
bruno/Chat/: send-message.bru
bruno/Config/: list-user-config.bru  reset-user-config.bru  update-user-config.bru
bruno/Conversations/: create-conversation.bru  delete-conversation.bru  get-conversation.bru  list-conversations.bru  update-conversation.bru
crates/app/nize-cli/: Cargo.toml
crates/app/nize-cli/src/: cli.rs  error.rs
crates/app/nize-desktop/: Cargo.toml  tauri.conf.json
crates/app/nize-desktop/src/: main.rs
crates/app/nize_api_server/: Cargo.toml
crates/app/nize_api_server/src/: main.rs
crates/app/nize_cli/: Cargo.toml
crates/app/nize_cli/src/: logging.rs  main.rs
crates/app/nize_codegen/: Cargo.toml
crates/app/nize_codegen/src/: gen_models.rs  gen_routes.rs  lib.rs  main.rs  schema.rs  writer.rs
crates/app/nize_desktop/: Cargo.toml  tauri.conf.json
crates/app/nize_desktop/capabilities/: default.json
crates/app/nize_desktop/icons/: icon.icns
crates/app/nize_desktop/resources/mcp-remote/: mcp-remote.mjs
crates/app/nize_desktop/src/: lib.rs  mcp_clients.rs
crates/app/nize_desktop_server/: Cargo.toml
crates/app/nize_desktop_server/src/: main.rs
crates/app/nize_terminator/: Cargo.toml
crates/app/nize_terminator/src/: main.rs  pid_watch.rs
crates/lib/nize_api/: Cargo.toml
crates/lib/nize_api/migrations/: 0001_auth.sql
crates/lib/nize_api/src/: config.rs  error.rs  lib.rs
crates/lib/nize_api/src/handlers/: admin_permissions.rs  ai_proxy.rs  auth.rs  chat.rs  config.rs  conversations.rs  embeddings.rs  hello.rs  ingest.rs  mcp_config.rs  mcp_tokens.rs  mod.rs  oauth.rs  permissions.rs  trace.rs
crates/lib/nize_api/src/middleware/: auth.rs  mod.rs
crates/lib/nize_api/src/services/: auth.rs  config.rs  cookies.rs  mcp_config.rs  mod.rs
crates/lib/nize_api/tests/: hello_integration.rs
crates/lib/nize_core/: Cargo.toml
crates/lib/nize_core/migrations/: 0001_auth.sql  0002_mcp_tokens.sql  0003_config.sql  0004_mcp_servers.sql  0005_embedding_models.sql  0006_mcp_stdio_config.sql  0007_secret_config.sql  0008_fix_baseurl_defaults.sql  0009_conversations.sql  0010_tool_config.sql  0011_oauth_id_token.sql  0012_extend_transport_type.sql  0013_rename_max_managed.sql
crates/lib/nize_core/src/: bun_sidecar.rs  conversations.rs  db.rs  hello.rs  lib.rs  migrate.rs  node_sidecar.rs  uuid.rs
crates/lib/nize_core/src/auth/: jwt.rs  mcp_tokens.rs  mod.rs  password.rs  queries.rs
crates/lib/nize_core/src/config/: cache.rs  mod.rs  queries.rs  resolver.rs  validation.rs
crates/lib/nize_core/src/embedding/: config.rs  indexer.rs  local.rs  mod.rs  models.rs  ollama.rs  openai.rs  provider.rs
crates/lib/nize_core/src/mcp/: discovery.rs  execution.rs  mod.rs  oauth.rs  queries.rs  secrets.rs  sse_transport.rs
crates/lib/nize_core/src/models/: auth.rs  config.rs  mcp.rs  mod.rs
crates/lib/nize_mcp/: Cargo.toml
crates/lib/nize_mcp/src/: auth.rs  lib.rs  server.rs
crates/lib/nize_mcp/src/hooks/: access_control.rs  audit.rs  mod.rs  tests.rs
crates/lib/nize_mcp/src/tools/: discovery.rs  dummy.rs  hello.rs  mod.rs  tests.rs  types.rs
crates/wasm/nize_wasm/: Cargo.toml
crates/wasm/nize_wasm/src/: lib.rs
doc/: GOOGLE_AUTH.md  MCP_configs.md  TODO.md  gog-plan.md
scripts/: bun-version.env  download-bun.sh  download-node.sh  generate-api.sh  generate-openapi-json.js  node-version.env  setup-sidecar-binaries.sh
submodules/: CLAUDE.md
(+35 files in other folders)
