[workspace]
members = [
    # Applications
    "crates/app/nize_cli",
    "crates/app/nize_desktop",
    "crates/app/nize_desktop_server",
    "crates/app/nize_codegen",
    "crates/app/nize_terminator",

    # Libraries
    "crates/lib/nize_core",
    "crates/lib/nize_mcp",
    "crates/lib/nize_api",
    "crates/lib/nize_api_client",

    # WASM
    "crates/wasm/nize_wasm",
]
default-members = [
    # Applications
    "crates/app/nize_cli",

    # Libraries
    "crates/lib/nize_core",
    "crates/lib/nize_mcp",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Six5536 Ltd"]
description = "Nize MCP — Model Context Protocol tools."
repository = "https://github.com/six5536/nize-mcp"
readme = "README.md"
keywords = ["nize", "mcp", "model-context-protocol"]
categories = ["command-line-utilities"]
license = "ISC"
edition = "2024"
rust-version = "1.93.0"

[workspace.dependencies]
nize_core = { path = "crates/lib/nize_core" }
nize_mcp = { path = "crates/lib/nize_mcp" }

thiserror = "^2.0"
clap = "^4.5"
flexi_logger = "^0.29"
log = "^0.4"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
wasm-bindgen = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "migrate",
    "uuid",
    "chrono",
] }
dirs = "6.0"
bcrypt = "0.17"
jsonwebtoken = "9"
sha2 = "0.10"
rand = "0.9"
chrono = { version = "0.4", features = ["serde"] }
http = "1"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tauri = "2"
tauri-build = "2"
tauri-plugin-shell = "2"
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.20"
axum = { version = "0.8", features = ["macros", "json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
dotenvy = "0.15"
reqwest = { version = "0.13", features = ["json", "stream", "query", "form"] }
nize_api = { path = "crates/lib/nize_api" }
nize_api_client = { path = "crates/lib/nize_api_client" }
progenitor = "0.12"
progenitor-client = "0.12"
futures = "0.3"
prettyplease = "0.2"
syn = "2.0"
url = "2.5"
aes-gcm = "0.10"
base64 = "0.22"
rmcp = { version = "0.16", features = [
    "transport-streamable-http-server",
    "transport-streamable-http-client-reqwest",
    "transport-child-process",
    "client",
] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
schemars = { version = "1", features = ["derive"] }
tokio-util = "0.7"
dashmap = "6"
sse-stream = "0.2"
futures-util = "0.3"
async-trait = "0.1"

# Optimize release builds for size (especially WASM)
[profile.release]
opt-level = "z"   # optimize aggressively for size
lto = true        # full link-time optimization across all crates
codegen-units = 1 # single codegen unit → better optimization
panic = "abort"   # no unwinding overhead
strip = true      # strip debug info and symbols
