[package]
name = "nize_cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Nize CLI"
repository.workspace = true
readme.workspace = true
keywords = ["nize", "mcp", "cli"]
categories.workspace = true
license.workspace = true

[dependencies]
nize_core = { workspace = true }
nize_mcp = { workspace = true }
thiserror = { workspace = true }
flexi_logger = { workspace = true, features = ["colors"] }
log = { workspace = true }
clap = { workspace = true, features = ["derive"] }

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
