[package]
name = "nize_codegen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Code generator for Nize API models from OpenAPI YAML."
repository.workspace = true
readme.workspace = true
keywords = ["nize", "codegen", "openapi"]
categories.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
