[package]
name = "nize_desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Nize Desktop — Tauri application"
repository.workspace = true
readme.workspace = true
keywords = ["nize", "tauri", "desktop"]
categories.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
nize_core = { workspace = true }
nize_mcp = { workspace = true }
nize_api_client = { workspace = true }
tauri = { workspace = true, features = [] }
tauri-plugin-shell = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"
