[package]
name = "nize_desktop_server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Nize desktop sidecar server binary."
repository.workspace = true
readme.workspace = true
keywords = ["nize", "desktop", "server"]
categories.workspace = true
license.workspace = true

[dependencies]
nize_api.workspace = true
nize_core.workspace = true
nize_mcp.workspace = true
tokio = { workspace = true, features = ["io-std", "io-util"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
dotenvy = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
axum = { workspace = true }
