[package]
name = "nize_terminator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Nize Terminator — process reaper for unclean shutdown cleanup."
repository.workspace = true
readme.workspace = true
keywords = ["nize", "terminator", "cleanup"]
categories.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
