[package]
name = "nize_terminator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Nize Terminator — process reaper for unclean shutdown cleanup."
repository.workspace = true
readme.workspace = true
keywords = ["nize", "terminator", "cleanup"]
categories.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_System_Threading",
  "Win32_Foundation",
] }

[dev-dependencies]
tempfile = { workspace = true }
