[package]
name = "nize_api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "HTTP API library for Nize."
repository.workspace = true
readme.workspace = true
keywords = ["nize", "api", "axum"]
categories.workspace = true
license.workspace = true

[dependencies]
nize_core.workspace = true
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
utoipa = { workspace = true }

[dev-dependencies]
nize_core = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tower = "0.5"
tracing-subscriber = { workspace = true }
