[package]
name = "nize_api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "HTTP API library for Nize."
repository.workspace = true
readme.workspace = true
keywords = ["nize", "api", "axum"]
categories.workspace = true
license.workspace = true

[dependencies]
nize_core.workspace = true
axum = { workspace = true }
axum-extra = { version = "0.10", features = ["cookie"] }
time = "0.3"
tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
bcrypt = { workspace = true }
jsonwebtoken = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

[dev-dependencies]
nize_core = { workspace = true }
reqwest = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tower = "0.5"
tracing-subscriber = { workspace = true }
