[package]
name = "nize_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Core domain logic for Nize."
repository.workspace = true
readme.workspace = true
keywords = ["nize", "mcp", "core"]
categories.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["process", "time"] }
sqlx = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
dirs = { workspace = true }
tempfile = { workspace = true }
url = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true }
bcrypt = { workspace = true }
jsonwebtoken = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
aes-gcm = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
rmcp = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
