[package]
name = "nize_mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "MCP protocol layer for Nize."
repository.workspace = true
readme.workspace = true
keywords = ["nize", "mcp", "model-context-protocol"]
categories.workspace = true
license.workspace = true

[dependencies]
nize_core.workspace = true
rmcp = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
schemars = { workspace = true }
axum = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
