[package]
name = "nize-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "WebAssembly bindings for Nize."
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
nize-core = { workspace = true }
nize-mcp = { workspace = true }
wasm-bindgen.workspace = true

[package.metadata.wasm-pack.profile.release]
# Disable wasm-pack's bundled wasm-opt — it may be too old for the current
# Rust output. We run our own wasm-opt pass in build-wasm.sh.
wasm-opt = false
